Comment out svh height; prevent horizontal scroll

--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100svh - 73px);
+    /* height: calc(100svh - 73px); */
     scroll-margin-top: 73px;
     /* border: 1px solid #FFFFFF */
 }
