--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,11 @@ html {
   scroll-behavior: smooth;
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 #root {
   /* width: 1126px; */
   max-width: 100%;
